fixed browser chrome covering the down arrow on mobile browsers (#323)

--- a/_sass/layouts/_landing.scss
+++ b/_sass/layouts/_landing.scss
@@ -78,7 +78,7 @@
       }
       .hero-lead {
         position: absolute;
-        top: 75%;
+        top: 70%;
         width: 100%;
         text-align: center;
         transform: translate(0, -50%);
@@ -86,7 +86,7 @@
       }
       .hero-down-arrow {
         position: absolute;
-        bottom: 25px;
+        bottom: 75px;
         left: 50%;
         transform: translate(-50%, 0);
       }
